[package]
name = "zksync_os_sequencer"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_l1_sender.workspace = true
zksync_os_l1_watcher.workspace = true
zksync_os_mempool.workspace = true
zksync_os_rpc.workspace = true
zksync_os_storage.workspace = true
zksync_os_storage_api.workspace = true
zksync_os_types.workspace = true
zksync_os_priority_tree.workspace = true

zk_os_forward_system.workspace = true
zk_ee.workspace = true
zk_os_basic_system.workspace = true
zk_os_api.workspace = true

air-compiler-cli.workspace = true
execution_utils.workspace = true
verifier_common.workspace = true
full_statement_verifier.workspace = true

reth-chainspec = { workspace = true }
reth-trie-common = { workspace = true }
reth-primitives.workspace = true
reth-primitives-traits = {workspace = true }
reth-revm = { workspace = true }
reth-storage-api = { workspace = true }
reth-execution-types = { workspace = true }

zksync_storage.workspace = true

anyhow.workspace = true
alloy = { workspace = true, default-features = false, features = ["rlp", "eips", "consensus", "k256", "rand"] }
blake2.workspace = true
ruint.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
itertools.workspace = true
futures.workspace = true
dashmap.workspace = true
vise.workspace = true
zksync_vlog.workspace = true
base64.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
jsonrpsee.workspace = true

bincode.workspace = true
smart-config = { workspace = true, features = ["primitive-types"] }

zksync_os_state.workspace = true
zksync_os_merkle_tree.workspace = true
axum.workspace = true
http.workspace = true
