[package]
name = "zksync_os_batch_storage_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_object_store.workspace = true
tokio = { workspace = true, features = ["full"] }