[package]
name = "zksync_os_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_contract_interface.workspace = true
hex.workspace = true

alloy = { workspace = true, default-features = false, features = ["provider-anvil-node", "rand", "json-rpc", "signer-local"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }

clap = { version = "4.5.21", features = ["derive"] }
rocksdb.workspace = true
bincode.workspace = true
